--- a/public/assets_pasal/css/pasal.css
+++ b/public/assets_pasal/css/pasal.css
@@ -43,6 +43,10 @@ a {
 {
 	font-size: 23px;
 }
+.fs-19
+{
+	font-size: 19px;
+}
 .box-shadow
 {
 	box-shadow: 1px 1px 4px 2px #eaeaea54;
@@ -76,34 +80,71 @@ section h3
 	color: #fff;
 }
 .bg-gradient{
-	    background-color: -webkit-linear-gradient( 
-45deg
- , #eb4d37, #f17e38);
+	background-color: -webkit-linear-gradient( 
+		45deg
+		, #eb4d37, #f17e38);
 }
 .btn-gradient
 {
 	padding: 10px 20px;
-    background: -webkit-linear-gradient( 
-45deg
- , #eb4d37, #f17e38);
-    color: #fff;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 10px;
-    display: block;
-    border: none;
-    text-align: center;
+	background: -webkit-linear-gradient( 
+		45deg
+		, #eb4d37, #f17e38);
+	color: #fff;
+	font-weight: bold;
+	font-size: 20px;
+	border-radius: 10px;
+	display: block;
+	border: none;
+	text-align: center;
 }
 h3 b
 {
 	color: var(--main-color);
 }
 /* START Section About */
+#pattern-about-1
+{
+	position: absolute;
+	right: 10px;
+	bottom: -75px;
+}
+#pattern-about-2
+{
+	position: absolute;
+	right: -58px;
+	top: 39px;
+}
+#pattern-about-3
+{
+	position: absolute;
+	left: -123px;
+	top: 20%;
+}
+#pattern-about-4
+{
+	position: absolute;
+	padding: 10px;
+	bottom: 20px;
+	background: #f34918d1;
+	border-radius: 0px 35px 35px 0px;
+	width: 100vw;
+	right: calc(100% - 88px);
+	text-align: right;
+}
+#pattern-about-5
+{
+	position: absolute;
+	right: 0px;
+	width: 100vw;
+	top: calc(100% + 114px);
+}
 .homepage section.about{
 	padding: 40px;
 	background: #fff;
 	border-radius: 20px;
 	box-shadow: 1px 1px 4px 2px #eaeaea54;
+	position: relative;
 }
 section.about span
 {
@@ -221,9 +262,23 @@ section.why .item:hover a
 }
 /* END Section Why */
 /* START Section Course */
+#pattern-course-1
+{
+	position: absolute;
+	width: 900px;
+	right: 0px;
+	bottom: 0px;
+}
+#pattern-course-2
+{
+	position: absolute;
+	top: 289px;
+}
 section.course
 {
 	padding: 40px 0px;
+	position: relative;
+	background: #f5f4f1;;
 }
 section.course h3 , section.course .subtitle
 {
@@ -343,15 +398,25 @@ section.teacher .item p
 }
 /* END Section Teacher */
 /* START Section Testimonial */
+#pattern-testimonial
+{
+	position: absolute;
+	right: 0px;
+	bottom: 0px;
+}
 section.testimonial
 {
 	padding: 40px 0px;
+	position: relative;
+	background: #f5f4f1;
 }
 section.testimonial .item
 {
 	text-align: center;
-    background: #fff;
-    padding: 20px;
+	background: #fff;
+	padding: 20px;
+	z-index: 1;
+	position: relative;
 }
 section.testimonial .item .icon 
 {
@@ -375,8 +440,8 @@ section.testimonial .item p
 #pattern-1
 {
 	position: absolute;
-    right: 0;
-    bottom: 0px;
+	right: 0;
+	bottom: 0px;
 }
 #form
 {
@@ -385,10 +450,10 @@ section.testimonial .item p
 }
 #form .form-content 
 {
-	    padding: 35px;
-    background: #fff;
-    border-radius: 30px;
-    box-shadow: 1px 1px 4px 2px #56565630;
+	padding: 35px;
+	background: #fff;
+	border-radius: 30px;
+	box-shadow: 1px 1px 4px 2px #56565630;
 }
 #form .form-wrapper
 {
@@ -397,9 +462,9 @@ section.testimonial .item p
 }
 #form .form-wrapper .simon 
 {
-	    position: absolute;
-    top: 0px;
-    text-align: center;
+	position: absolute;
+	top: 0px;
+	text-align: center;
 }
 #form .form-content h4
 {
@@ -413,11 +478,11 @@ section.testimonial .item p
 #form input, #form select
 {
 	width: 100%;
-    border: 1px solid #a2a2a2;
-    padding: 10px;
-    padding-left: 50px;
-    border-radius: 10px;
-    margin-bottom: 10px;
+	border: 1px solid #a2a2a2;
+	padding: 10px;
+	padding-left: 50px;
+	border-radius: 10px;
+	margin-bottom: 10px;
 }
 #form .form-group
 {
@@ -425,9 +490,9 @@ section.testimonial .item p
 }
 #form .form-group .icon 
 {
-	    position: absolute;
-    top: 12px;
-    left: 10px;
+	position: absolute;
+	top: 12px;
+	left: 10px;
 }
 /* END FORM */
 /* news css */
@@ -438,10 +503,10 @@ section.recent-news
 }
 .card-news .calendar 
 {
-		width: 50px;
-    text-align: center;
-    background: #e4e4e4;
-    padding: 5px 0px;
+	width: 50px;
+	text-align: center;
+	background: #e4e4e4;
+	padding: 5px 0px;
 }
 .card-news .calendar  p
 {
@@ -449,11 +514,11 @@ section.recent-news
 }
 .card-news h4
 {
-	  padding: 10px;
-    font-size: 18px;
-    background: #f3f3f3;
-        margin: 0;
-    width: 100%;
+	padding: 10px;
+	font-size: 18px;
+	background: #f3f3f3;
+	margin: 0;
+	width: 100%;
 }
 .card-news img
 {
@@ -467,23 +532,23 @@ section.recent-news
 .news-category .item,.maybe-news .item
 {
 	background: #fff;
-    padding: 15px;
-    margin-bottom: 30px;
-    position: relative;
+	padding: 15px;
+	margin-bottom: 30px;
+	position: relative;
 }
 .news-category .item h4 a, .news-category .sidebar h4 a ,.maybe-news .item h4 a
 {
 	font-size: 18px;
-    color: #222;
-    text-decoration: auto;
-    margin-top: 15px;
-    width: 100%;
-    display: block;
+	color: #222;
+	text-decoration: auto;
+	margin-top: 15px;
+	width: 100%;
+	display: block;
 }
 .news-category .item .view-more, .news-category .sidebar .view-more ,.maybe-news .item .view-more
 {
 	font-size: 14px;
-    color: #222;
+	color: #222;
 }
 .news-category .lastest
 {
@@ -491,21 +556,21 @@ section.recent-news
 }
 .news-category .item .calendar
 {
-	    background: url(../icon/calendar.png) no-repeat;
-    position: absolute;
-    width: 45px;
-    top: 100px;
-    left: -36px;
+	background: url(../icon/calendar.png) no-repeat;
+	position: absolute;
+	width: 45px;
+	top: 100px;
+	left: -36px;
 }
 .news-category .item .calendar p
 {
-    margin: 0px;
-    width: 100%;
-    text-align: center;
-    color: #fff;
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 14px;
+	margin: 0px;
+	width: 100%;
+	text-align: center;
+	color: #fff;
+	font-size: 14px;
+	font-weight: bold;
+	line-height: 14px;
 }
 .news-category .item .calendar p:first-child
 {
@@ -530,9 +595,9 @@ section.recent-news
 }
 .sidebar
 {
-	 background: #fff;
-    padding: 10px;
-    box-shadow: 1px 1px 3px 1px #b9b9b9b3;
+	background: #fff;
+	padding: 10px;
+	box-shadow: 1px 1px 3px 1px #b9b9b9b3;
 }
 .sidebar h4
 {
@@ -544,9 +609,9 @@ section.recent-news
 }
 .sidebar .view-more
 {
-    margin-bottom: 15px;
-    width: 100%;
-    display: block;
+	margin-bottom: 15px;
+	width: 100%;
+	display: block;
 
 }
 @media (min-width: 768px)
@@ -575,20 +640,20 @@ section.recent-news
 }
 .thanhtich .item
 {
-	    padding: 20px;
-    background: #eff0f4;
-    border-top: 3px solid;
-    border-bottom: 7px solid;
-    border-color: var(--main-color);
-    text-align: center;
-    margin-bottom: 20px;
+	padding: 20px;
+	background: #eff0f4;
+	border-top: 3px solid;
+	border-bottom: 7px solid;
+	border-color: var(--main-color);
+	text-align: center;
+	margin-bottom: 20px;
 }
 .thanhtich .item h4
 {
 	font-size: 20px;
 	font-weight: bold;
 	margin-top: 20px;
-    margin-bottom: 0px;
+	margin-bottom: 0px;
 }
 .thanhtich .item span
 {
@@ -613,10 +678,10 @@ section.recent-news
 {
 	position: absolute;
 	display: none;
-	    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
 }
 .thanhtich .item .thumbnail:hover .zoom
 {
@@ -658,8 +723,8 @@ section.recent-news
 .teacher-page section.about span img 
 {
 	position: absolute;
-    left: 0;
-    top: 10px;
+	left: 0;
+	top: 10px;
 }
 /* END teacher page*/
 /* START lichkhaigiang page */
@@ -695,10 +760,10 @@ section.recent-news
 .search-form .button-form
 {
 	width: auto;
-    margin: auto;
-    font-size: 20px;
-    padding: 10px 59px;
-    margin-top: 31px;
+	margin: auto;
+	font-size: 20px;
+	padding: 10px 59px;
+	margin-top: 31px;
 }
 .search-form #form
 {
@@ -735,10 +800,10 @@ table.lich td p
 }
 .table-lich
 {
-	    border: 1px solid #e5e5e5;
-    border-radius: 15px;
-    overflow: hidden;
-    margin-top: 30px;
+	border: 1px solid #e5e5e5;
+	border-radius: 15px;
+	overflow: hidden;
+	margin-top: 30px;
 }
 .table-lich h4
 {
@@ -748,21 +813,21 @@ table.lich td p
 /* START pp page */
 .pp-about
 {
-margin-top: -35px;
-    display: block;
-    background: #fff;
-    position: relative;
-    padding: 30px 40px;
-    border-radius: 30px;
+	margin-top: -35px;
+	display: block;
+	background: #fff;
+	position: relative;
+	padding: 30px 40px;
+	border-radius: 30px;
 }
 .pp-about .btn-about
 {
 	margin: 0 auto;
-    padding: 10px 100px;
-    background: var(--sub-color);
-    color: #fff;
-    font-weight: bold;
-    border-radius: 30px;
+	padding: 10px 100px;
+	background: var(--sub-color);
+	color: #fff;
+	font-weight: bold;
+	border-radius: 30px;
 }
 .pp-uudiem
 {
@@ -784,19 +849,19 @@ margin-top: -35px;
 .video-block .item
 {
 	position: relative;
-    border: 1px solid var(--main-color);
-    height: 200px;
-    border-radius: 20px;
-    margin-top: 30px;
+	border: 1px solid var(--main-color);
+	height: 200px;
+	border-radius: 20px;
+	margin-top: 30px;
 }
 .video-block .item iframe
 {
 	width: 100%;
-    height: 200px;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    border-radius: 20px;
+	height: 200px;
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	border-radius: 20px;
 }
 /* END pp page */
 /* START detail news */
@@ -812,11 +877,11 @@ margin-top: -35px;
 .related-news h4 a 
 {
 	color: #252525;
-    border-bottom: 1px solid #e5e5e5;
-    width: 100%;
-    display: block;
-    padding: 10px 0px;
-    font-size: 20px;
+	border-bottom: 1px solid #e5e5e5;
+	width: 100%;
+	display: block;
+	padding: 10px 0px;
+	font-size: 20px;
 }
 .related-news h4 a:hover
 {
@@ -829,7 +894,7 @@ margin-top: -35px;
 .form-sidebar
 {
 	padding: 30px 10px !important;
-    background: #fff;
+	background: #fff;
 }
 .form-sidebar h4
 {
@@ -868,3 +933,145 @@ margin-top: -35px;
 }
 
 /* END detail news */
+/* START lotrinh */
+.lotrinh-about
+{
+	background: #fff;
+	padding: 40px;
+	border-radius: 30px;
+	margin-top: -100px;
+	position: relative;
+
+}
+.lotrinh-about img
+{
+	margin-right: 10px;
+}
+.lotrinh-about p 
+{
+	padding-left: 30px;
+
+}
+.lotrinh-loiich
+{
+		padding-bottom: 0px;
+	margin-bottom: -25px;
+}
+.lotrinh-loiich h4
+{
+	font-size: 25px;
+	color: var(--sub-color);
+	font-weight: bold;
+}
+.lotrinh-loiich h4 b
+{
+	color: var(--main-color);
+}
+.lotrinh-loiich .description
+{
+	font-size: 22px;
+}
+.lotrinh-loiich .item 
+{
+	background: #fff;
+	border-radius: 50px 20px 20px 20px;
+	border: 2px solid;
+	position: relative;
+	z-index: 1;
+	min-height: 245px;
+	margin-bottom: 40px;
+}
+.lotrinh-loiich .item p
+{
+	padding: 20px;
+}
+.lotrinh-loiich .item-1
+{
+	border-color: #8a89ff;
+	box-shadow: 1px 1px 5px #8a89ff;
+}
+.lotrinh-loiich .item-2
+{
+	border-color: #ff7f00;
+	box-shadow: 1px 1px 5px #ff7f00;
+}
+.lotrinh-loiich .item-3
+{
+	border-color: #00c79f;
+	box-shadow: 1px 1px 5px #00c79f;
+}
+.lotrinh-loiich .item-4
+{
+	border-color: #fc3d10;
+	box-shadow: 1px 1px 5px #fc3d10;
+}
+.lotrinh-loiich .thumbnail
+{
+	padding: 10px;
+	margin-left: -55px;
+}
+.lotrinh-loiich .list-item 
+{
+	position: relative;
+}
+#lotrinh-loiich-pattern-1
+{
+	position: absolute;
+	width: auto;
+	left: calc(100% - 58px);
+	top: -16px;
+}
+#lotrinh-loiich-pattern-2
+{
+	width: auto;
+	position: absolute;
+	top: calc(100% - 145px);
+	left: -31px;
+}
+.lotrinh-content
+{
+	padding: 30px 0px;
+	background: #f5f4f1;
+	    z-index: 1;
+    position: relative;
+}
+.lotrinh-content .item 
+{
+	padding: 10px;
+	background: #fff;
+}
+.lotrinh-content .item img
+{
+	width: 100%;
+}
+.lotrinh-content h4
+{
+	margin-top: 20px;
+    text-align: center;
+    font-weight: bold;
+    color: var(--sub-color);
+}
+.lotrinh-content h4 b
+{
+	color: var(--main-color);
+}
+.lotrinh-content .label
+{
+	text-align: center;
+    margin: 20px 0px;
+}
+.lotrinh-content .item .label a
+{
+	padding: 10px 20px;
+    margin: 10px 0px;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 25px;
+}
+.lotrinh-content .item-1 .label a
+{
+	    background: -webkit-linear-gradient( 
+45deg
+ , #eb4d37, #ffd920);
+}
+/* END lotrinh */
