--- a/public/assets_pasal/css/pasal.css
+++ b/public/assets_pasal/css/pasal.css
@@ -428,11 +428,13 @@ section.testimonial .item
 }
 section.testimonial .item .icon 
 {
-	margin: 20px 0px;
+	margin: 20px auto;
+    width: auto;
 }
 section.testimonial .item .avatar 
 {
-	margin: 20px 0px;
+	margin: 20px auto;
+    width: auto;
 }
 section.testimonial .item h4
 {
@@ -442,6 +444,7 @@ section.testimonial .item h4
 section.testimonial .item p
 {
 	margin-bottom: 0px;
+    font-style: normal;
 }
 /* END Section Testimonial */
 /* START FORM */
@@ -1344,4 +1347,21 @@ section.dangky-khoahoc .btn-white
         width: 100vw;
             background: #2222225c;
         display: none;
+    }
+    .teacher-slide .owl-nav
+    {
+        position: absolute;
+        top: 40%;
+        width: calc(100% - 20px);
+        display: block !important;
+    }
+    .teacher-slide .owl-nav button.owl-prev
+    {
+        left: -70px;
+    position: absolute;
+    }
+     .teacher-slide .owl-nav button.owl-next
+    {
+        right: -70px;
+    position: absolute;
     }
