--- a/public/assets_pasal/css/pasal.css
+++ b/public/assets_pasal/css/pasal.css
@@ -52,17 +52,21 @@ ul li
 a {
 	text-decoration: auto;
 }
-.fs-23
+.fs-16
 {
-	font-size: 23px;
+    font-size: 16px;
+}
+.fs-19
+{
+	font-size: 19px;
 }
 .fs-22
 {
 	font-size: 22px;
 }
-.fs-19
+.fs-23
 {
-	font-size: 19px;
+	font-size: 23px;
 }
 .box-shadow
 {
