--- a/public/assets_pasal/css/pasal.css
+++ b/public/assets_pasal/css/pasal.css
@@ -45,7 +45,7 @@ a{
 	height: auto;
 	object-fit: cover;
 }
-ul li 
+ul li, li
 {
 	list-style: none;
 }
@@ -879,6 +879,7 @@ table.lich td p
 {
     position: absolute;
     bottom: 0px;
+    width: 205px;
 }
 .pp-uudiem h4 b
 { 
@@ -1539,4 +1540,39 @@ section.dangky-khoahoc .btn-white
     .submenu .nav-link:hover
     {
         border-left: 2px solid var(--main-color);
+    }
+    .open-video-2 iframe
+    {
+            position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    }
+    .table-lich:last-child
+    {
+        margin-bottom: 40px;
+    }
+    .about-page
+    {
+        padding: 30px 0px;
+        background: var(--main-color);
+        position: relative;
+    }
+    .about-page h3
+    {
+        font-weight: bold;
+    }
+    .about-page .text-info
+    {
+        padding-left: 45px;
+    }
+    #background-about
+    {
+        width: 50%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    object-fit: cover;
+    left: 0px;
     }
